tests/lime/fail/tokens/macro_rest/byte_39.wsa
macro m' [push 39] m'
